--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
           <a href="#"><img class="header__logo" src="./images/header-logo.svg" alt="Логотип" /></a>
           <nav>
             <ul class="header__links">
-              <li class="header__lang-link"><a href="#" class="header__lang-link">Ru</a></li>
+              <li class="header__lang-link header__lang-link_ru"><a href="#" class="header__lang-link">Ru</a></li>
               <li class="header__lang-link"><a href="#" class="header__lang-link">En</a></li>
             </ul>
           </nav>
@@ -65,7 +65,8 @@
 
             <div class="place">
               <h3 class="place__title">
-                Куршская коса
+                Куршская 
+                коса
               </h3>
               <img src="./images/place-kosa.jpg" alt="Куршская коса" class="place__image" />
 
