--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
 
               <div class="place__website">
                 <p class="place__url-heading">URL</p>
-                <a href="https://vk.com/baikalmile" class="place__link" target="blanc">vk.com/baikalmile</a>
+                <a href="https://vk.com/baikalmile" class="place__link" target="_blanc">https://vk.com/baikalmile</a>
               </div>
 
               <div class="place__content">
@@ -174,13 +174,10 @@
 
               <div class="place__content">
                 <p class="place__paragraph">
-                  Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два водных горизонта — спокойного Куршского залива с одной стороны и подёрнутого рябью волн Балтийского моря с другой. Уникальная природная зона на краю российского
-                  анклава.
-                </p>
-
-                <p class="place__paragraph">
-                  На этом Калининградская область не заканчивается. Для путешественника и исследователя там же по соседству — самая западная точка России, Балтийская коса, — и немецкое наследие россыпи небольших приморских городов.
-                  Атмосфера здешних мест исключает суету, окуная в спокойствие природы и запах стального, прохладного моря.
+                  Сибирь заканчивается не на Урале, а в Карелии: образующая тайгу сибирская лиственница не растёт западнее Водлозера. 
+                  Зато здесь она вымахивает на 30 метров — леса карельских национальных парков из-за непроходимых болот никогда не знали топора. 
+                  Некоторым соснам уже больше чем полтысячелетия. Прикоснитесь к живому существу, видевшему солнце раньше, чем увидал его Иван Грозный. 
+                  В девственном лесу на сотню километров не встретишь тропы. А на редких тропинках деревья в паре метров от земли помечены медвежьими когтями. Чтобы все знали, кто тут хозяин.
                 </p>
               </div>
             </div>
