исправлены ошибки автотеста

--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
 
               <div class="place__website">
                 <p class="place__url-heading">URL</p>
-                <a href="https://vk.com/baikalmile" class="place__link" target="_blanc">https://vk.com/baikalmile</a>
+                <a href="https://vk.com/baikalmile" class="place__link" target="blanc">https://vk.com/baikalmile</a>
               </div>
 
               <div class="place__content">
