--- a/index.html
+++ b/index.html
@@ -6,16 +6,14 @@
     <link rel="stylesheet" href="pages/index.css" />
     <title>Путешествие по России</title>
   </head>
-  <body>
+  <body class="big-page">
     <div class="page">
       <header class="header">
         <a href="#"><img class="header__logo" src="./images/header-logo.svg" alt="Логотип" /></a>
-        <div>
-          <ul class="header__links">
-            <li><a href="#" class="header__lang-link header__lang-link_active">Ru</a></li>
-            <li><a href="#" class="header__lang-link">En</a></li>
-          </ul>
-        </div>
+        <ul class="header__links">
+          <li class="header__list"><a href="#" class="header__lang-link header__lang-link_active">Ru</a></li>
+          <li class="header__list"><a href="#" class="header__lang-link">En</a></li>
+        </ul>
       </header>
 
       <main class="content">
@@ -61,7 +59,7 @@
         </section>
 
         <section class="places">
-          <article class="place">
+          <div class="place">
             <h3 class="place__title">
               Куршская коса
             </h3>
@@ -83,9 +81,9 @@
                 здешних мест исключает суету, окуная в спокойствие природы и запах стального, прохладного моря.
               </p>
             </div>
-          </article>
+          </div>
 
-          <article class="place">
+          <div class="place">
             <h3 class="place__title">
               Кольский
             </h3>
@@ -106,9 +104,9 @@
                 пронизывающей земную кору сверхглубокой скважиной, а от апатитов вас давно накрывает апатия. Но ваша мечта увидеть северное сияние начинает сбываться с билетом в Мурманск.
               </p>
             </div>
-          </article>
+          </div>
 
-          <article class="place">
+          <div class="place">
             <h3 class="place__title">
               Алтай
             </h3>
@@ -130,9 +128,9 @@
                 — тоже обитатели Алтайского края.
               </p>
             </div>
-          </article>
+          </div>
 
-          <article class="place">
+          <div class="place">
             <h3 class="place__title">
               Зимний Байкал
             </h3>
@@ -153,9 +151,9 @@
                 года на фестивале «Байкальская миля» был поставлен мировой рекорд — 197.011 км/ч.
               </p>
             </div>
-          </article>
+          </div>
 
-          <article class="place">
+          <div class="place">
             <h3 class="place__title">
               Карелия
             </h3>
@@ -173,7 +171,7 @@
                 редких тропинках деревья в паре метров от земли помечены медвежьими когтями. Чтобы все знали, кто тут хозяин.
               </p>
             </div>
-          </article>
+          </div>
         </section>
 
         <section class="cover">
